Better tags and tag page

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:        Dorsal Stream
-tagline:      Insight
+tagline:      Dorsal Stream (and Ventral)
 description:  'Some Computer Vision and Machine Learning Musings, Peppered with Occasional Off-topic Philosophical and Non-sensical Ramblings'
 url:          http://mehtadushy.github.io/
 version:      1.0
