--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:        Dorsal Stream
 tagline:      Dorsal Stream (and Ventral)
 description:  'Some Computer Vision and Machine Learning Musings, Peppered with Occasional Off-topic Philosophical and Non-sensical Ramblings'
-url:          http://mehtadushy.github.io
+url:          http://mehtadushy.github.io/
 version:      1.0
 
 highlighter:
