--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,10 @@
 title:        Dorsal Stream
 tagline:      Dorsal Stream (and Ventral)
-description:  'Some Computer Vision and Machine Learning Musings, Peppered with Occasional Off-topic Philosophical and Non-sensical Ramblings'
+description:  'Just a blog'
 url:          http://mehtadushy.github.io/
 version:      1.0
+
+comments:	  true
 
 highlighter:
 
