--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title:        Dorsal Stream
-tagline:      Dorsal Stream (and Ventral)
-description:  'Just a blog'
+title:        Dushyant Mehta
+tagline:      Computer Vision and Machine Learning Stuff
+description:  'Work and ramblings'
 url:          http://mehtadushy.github.io/
 version:      1.0
 
