--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:        Dushyant Mehta
+title:        Dorsal Stream
 tagline:      Computer Vision and Machine Learning Stuff
 description:  'Work and ramblings'
-url:          http://mehtadushy.github.io/
+url:          http://dorsalstream.net/
 version:      1.0
 
 comments:	  true
