First complete post.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:        Dorsal Stream
 tagline:      ML & CV thoughts, ideas, and rants
-description:  'Computer Vision and Machine Learning ~~Coming Soon~~'
+description:  'Computer Vision and Machine Learning'
 url:          http://dorsalstream.net/
 version:      1.0
 
