--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:        Dorsal Stream
 tagline:      ML & CV thoughts, ideas, and rants
 description:  'Computer Vision and Machine Learning'
-url:          http://dorsalstream.net/
+url:          dorsalstream.github.io
 version:      1.0
 
 comments:	  true
